Bug 256910 - Chart Reports hang the application
Summary: Chart Reports hang the application
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5
Platform: MacPorts macOS
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-14 19:21 UTC by Marko Käning
Modified: 2011-06-04 17:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
JPEG showing tiny generated graph overlaying report button in chart view (98.97 KB, image/jpeg)
2010-11-24 22:04 UTC, Marko Käning
Details
JPEG showing tiny generated graph overlaying report button in chart view (98.97 KB, image/jpeg)
2010-11-24 22:04 UTC, Marko Käning
Details
Call stack from Xcode debug run (111.78 KB, image/jpeg)
2010-11-24 22:07 UTC, Marko Käning
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marko Käning 2010-11-14 19:21:30 UTC
Version:           4.5 (using KDE 4.5.3) 
OS:                OS X

KMM 4.5 and 4.5.1 hang when one clicks on a report link on the app's home-page pointing to a report's graph chart page.
If the report is just textual all is fine though. Seems to be connected to the graphs.
Don't know how to diagnose further what's going on, since I don't get a crashlog. App just hangs without any actions.
How to proceed to help you?

Reproducible: Didn't try

Steps to Reproduce:
Create a graph chart report.
Open the report either from home-page or also from reports view by clicking the corresponding report link

Actual Results:  
App hangs itself. Doesn't crash, just doesn't respond anymore. No crashlog delivered

Expected Results:  
Report chart should be displayed

Say you have a textual report it would be shown, but if you switch over from that textual to chart it WOULD ALSO SHOW THE CHART without a HANG!!!
Comment 1 Marko Käning 2010-11-24 22:04:25 UTC
Created attachment 53706 [details]
JPEG showing tiny generated graph overlaying report button in chart view

This is only visible if one pulls another window over the application, or if one moves the application window over the screen's borders THEREBY FORCING  A REDRAW of the application window.

By doing so one can reveal that the chart is actually a tiny empty image.

See next image for more info about what the application is doing.
Comment 2 Marko Käning 2010-11-24 22:04:26 UTC
Created attachment 53707 [details]
JPEG showing tiny generated graph overlaying report button in chart view

This is only visible if one pulls another window over the application, or if one moves the application window over the screen's borders THEREBY FORCING  A REDRAW of the application window.

By doing so one can reveal that the chart is actually a tiny empty image.

See next image for more info about what the application is doing.
Comment 3 Marko Käning 2010-11-24 22:07:54 UTC
Created attachment 53708 [details]
Call stack from Xcode debug run

This call stack shows that the application actually tries to draw a rectangle and then issues a QT event which causes the KDChart to redraw itself.

This procedure actually loops forever, which is why the application hangs.

I stopped the application many times while it was looping and I always found it somewhere in KDChart::Chart::event()........
Comment 4 Alvaro Soliverez 2011-05-16 04:54:52 UTC
Marko, does this still happen?
Comment 5 Marko Käning 2011-05-19 00:37:28 UTC
Just finished building the latest SVN revision 1232629 and tested it.
Yes I can verify that it still happens. The application hangs as described above.
Comment 6 Marko Käning 2011-05-22 02:03:03 UTC
I noticed that the following charts actually do get rendered fine:

1) Income and Expenses Graph
.
. (total 7 in a row if you sort column for Reports name)
.
7) Investment Worth Graph
8) Yearly budgeted vs Actual Graph



The following ones, however, make the app hang:

1) Net Worth Forecast Graph
2) Net Worth Graph

And also all from these derived reports of mine.

I've no clue why this happens...
Comment 7 Marko Käning 2011-06-04 13:37:32 UTC
I checked again with the latest revision 1234963 and can report that also the "Net Worth (Forecast)" reports DO their job just fine now. No hanging KMM anymore!!! :-)

So, this ticket can be seen as closed. Great!!! :-)

---
Still, my old derived reports hang the app. But if I derive new ones from the above reports they also do work fine. (Looks like there is some configuration setting inside my old derived reports which causes this odd behaviour.)

Furthermore, in the process of creating new reports or modifying existing ones I experienced a few crashes, but none of them was reproducible. :-(
Comment 8 Marko Käning 2011-06-04 13:37:32 UTC
I checked again with the latest revision 1234963 and can report that also the "Net Worth (Forecast)" reports DO their job just fine now. No hanging KMM anymore!!! :-)

So, this ticket can be seen as closed. Great!!! :-)

---
Still, my old derived reports hang the app. But if I derive new ones from the above reports they also do work fine. (Looks like there is some configuration setting inside my old derived reports which causes this odd behaviour.)

Furthermore, in the process of creating new reports or modifying existing ones I experienced a few crashes, but none of them was reproducible. :-(
Comment 9 Thomas Baumgart 2011-06-04 17:18:31 UTC
SVN commit 1235193 by tbaumgart:

Fixed endless loop. Thanks to Marko for finding the problem. The fix has been reported to KDAB for inclusion in the original package.

BUG: 256910

 M  +1 -1      KDChartCartesianDiagramDataCompressor_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1235193