Fixed endless loop. Thanks to Marko for finding the problem. The fix has been reported to KDAB for inclusion in the original package.

BUG: 256910

svn path=/trunk/extragear/office/kmymoney/; revision=1235193